--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.8.6",
     "@shopify/draggable": "^1.0.0-beta.8",
     "babel-loader": "^8.0.6",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
@@ -30,5 +31,5 @@
     "presets": [
       "@babel/preset-env"
     ]
-  },
+  }
 }
