--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@babel/preset-env": "^7.8.6",
     "@shopify/draggable": "^1.0.0-beta.8",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
