--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "@shopify/draggable": "^1.0.0-beta.8",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "eslint-loader": "^3.0.3",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
