Updated eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,9 @@
         "es6": true
     },
     "parser": "babel-eslint",
-    "extends": ["airbnb"]
+    "extends": ["airbnb"],
+    "rules": {
+        "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+        "no-param-reassign": ["error", { "props": false }]
+    }
 }
