--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode production",
+    "heroku-postbuild": "webpack --config ./webpack.config.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
@@ -43,7 +45,8 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@shopify/draggable": "^1.0.0-beta.8"
+    "@shopify/draggable": "^1.0.0-beta.8",
+    "express": "^4.17.1"
   },
   "babel": {
     "presets": [
