--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Using Javascript drag and drop to help Australian Football League fans pick their own WA state of Origin team.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode production",
     "heroku-postbuild": "webpack --config ./webpack.config.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
