--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   },
   "dependencies": {
     "@shopify/draggable": "^1.0.0-beta.8",
-    "express": "^4.17.1"
+    "dom-to-image": "^2.6.0",
+    "express": "^4.17.1",
+    "file-saver": "^2.0.2"
   },
   "babel": {
     "presets": [
