--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@shopify/draggable": "^1.0.0-beta.8",
     "dom-to-image": "^2.6.0",
     "express": "^4.17.1",
-    "file-saver": "^2.0.2"
+    "file-saver": "^2.0.2",
+    "minimist": "^1.2.5"
   },
   "babel": {
     "presets": [
